--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.12.1",
     "next": "14.1.4",
     "react": "^18.2.0",
     "react-dom": "^18",
@@ -21,6 +22,7 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "prisma": "^5.12.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
